<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <TextView android:id="@+id/tv_linearlayout"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:layout_marginTop="20dp"
              android:textAllCaps="true"
              android:text="@string/linearlayout"/>

    <TextView android:id="@+id/tv_relativelayout"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:textAllCaps="true"
              android:layout_marginTop="20dp"
              android:text="@string/relativelayout"/>

    <TextView android:id="@+id/tv_framelayout"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:textAllCaps="true"
              android:layout_marginTop="20dp"
              android:text="@string/framelayout"/>

    <TextView android:id="@+id/tv_cardview"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:layout_marginTop="20dp"
              android:textAllCaps="true"
              android:text="@string/cardview"/>

    <TextView android:id="@+id/tv_multiple_layouts"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:textAllCaps="true"
              android:layout_marginTop="20dp"
              android:text="@string/multiple_layouts"/>

    <TextView android:id="@+id/tv_programmatic_views"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:textAllCaps="true"
              android:layout_marginTop="20dp"
              android:text="@string/programmatic_views"/>

</LinearLayout>
